src/assets/scss/05_page/_interior-page.scss
.p-interior-page {

    .o-hero {
        padding-top: 60px;

        @include breakpoints("desktop") {
            padding-top: 80px;
        }

        &__titles {
            position: static;
            margin-top: 40px;

            h1 {
                margin-bottom: 20px;
            }
        }

        &__top {
            margin-bottom: 29px;

            @include breakpoints("tablet") {
                margin-bottom: 112px;
            }
        }

        &__left,
        &__right {
            @include span-col(12);

            @include breakpoints("tablet") {
                @include span-col(6);
            }
        }

        // Mobile section divider
        // &::after {
        //     content: '';
        //     display: block;
        //     bottom: 0;
        //     left: 0;
        //     height: 2px;
        //     position: absolute;
        //     background: get-color("primary", "fresh");
        //     width: 20px;
        // }
    }

    .o-hero__subtitles {

        @include breakpoints("tablet") {
            font-weight: 100;
            letter-spacing: 0px;
        }

        h3 {
            @include line-height(24px);
            margin-bottom: 0;

            @include breakpoints("tablet") {
                @include font-size(30px);
                @include line-height(50px);
            }
        }
    }
}

